# deepthought

./: .gitignore  Cargo.toml  Makefile  README.md
examples/chat_about_apples/: Cargo.toml
examples/chat_about_apples/src/: main.rs
examples/deepthought_router_template/: Cargo.toml  README.md
examples/deepthought_router_template/src/: main.rs
examples/router_demo/: Cargo.toml
examples/router_demo/src/: main.rs
examples/simple_example/: Cargo.toml
examples/simple_example/src/: main.rs
examples/templated_example/: Cargo.toml
examples/templated_example/src/: main.rs
examples/tinytranslator/: Cargo.toml
examples/tinytranslator/src/: main.rs
src/: deepthought.rs  deepthought_backend.rs  deepthought_builder.rs  deepthought_context.rs  deepthought_ctx_model.rs  deepthought_model.rs  deepthought_prompt.rs  deepthought_router.rs  deepthought_router_builder.rs  deepthought_router_catalog.rs  deepthought_router_chat.rs  deepthought_router_expert.rs  deepthought_router_expert_facts.rs  deepthought_router_expert_rules.rs  deepthought_router_llm.rs  deepthought_router_prompt.rs  deepthought_router_rag.rs  deepthought_router_route.rs  deepthought_router_sessions.rs  deepthought_router_template.rs  deepthought_vector.rs  deepthought_vector_output.rs  lib.rs
tests/: basic-test.rs  basic-value-test.rs
