[package]
name = "deepthought"
version = "0.1.3"
edition = "2024"
description = "Functional wrapper around Llama.cpp with Rust Dynamic datatypes support"
license-file = "LICENSE"
repository = "https://github.com/vulogov/deepthought"
categories = ["development-tools"]
keywords = ["ai", "llama", "llama-cpp"]

[dependencies]
easy-error = "1.*.*"
grainfs = "0.1.1"
lazy_static = "1.5.*"
llama-cpp-2 = { version = "0.1.*", features = ["sampler"] }
log = "0.4.*"
rust_dynamic = "0.*.*"
took = "0.1.2"
vecstore = "1.*.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = { version = "1.0.*", default-features = true }
nanoid = "0.4.0"
